preparation for google play
v1.0 ready for goodle play .

--- a/app/src/main/res/values/non_localizable_custom.xml
+++ b/app/src/main/res/values/non_localizable_custom.xml
@@ -123,7 +123,7 @@
     <bool name="hide_assistant_from_side_menu">true</bool>
     <bool name="hide_settings_from_side_menu">false</bool>
     <bool name="hide_recordings_from_side_menu">false</bool>
-    <bool name="disable_accounts_settings_from_side_menu">false</bool>
+    <bool name="disable_accounts_settings_from_side_menu">true</bool>
     <bool name="show_log_out_in_side_menu">false</bool>
 
     <!-- Notifications -->
